<resources>
    <string name="app_name">Segurança do trabalho</string>
    <string name="btn_pesquisa">Adicionar Pontos</string>
    <string name="tv_nome">Nome</string>
    <string name="tv_cargo">Cargo</string>
    <string name="txt_pesquisa">Nome do funcionário</string>
    <string name="txt_epi_nome">Digite o nome do EPI</string>
    <string name="txt_epi_validade">Digite a validade do EPI</string>
    <string name="txt_epi_CA">Digite a validade CA do EPI</string>
    <string name="tv_expulso">Sua conta não possui parâmetros de administrador</string>
    <string name="btn_expulso">Sair</string>
    <string name="btn_funcionario">Enviar</string>
    <string name="btn_epi">Adicionar EPI</string>
    <string name="btn_fun_epi">EPI</string>
    <string name="tv_validade">Validade</string>
    <string name="tv_ca">Validade CA</string>
    <string name="tv_EPI">Nome EPI</string>
    <string name="bonificacao1">Bônus de entrega</string>
    <string name="bonificacao2">Relato de problemas</string>
    <string name="bonificacaog">Bonificação</string>
    <string name="infracao1">EPI não equipado</string>
    <string name="infracao2">Atraso de entrega de EPI</string>
    <string name="infracao3">EPI danificado</string>
    <string name="infracaog">Infração</string>
    <string name="msg_box">Remover EPI</string>
</resources>
